# network

./: client.c
LVGL_output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
LVGL_output/fonts/: ui_font_Black.c
SLS/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
code/: 1-字节序.c  10-数据转发服务器.c  11-http下载图片.c  12-http获取天气数据.c  13-连接巴法云设备.c  2-ip地址转换.c  3-udp发送.c  4-udp接收.c  5-tcp客户端.c  6-tcp服务器.c  7-tcp受控端.c  8-json数据封包.c  9-json数据解析.c  a.out  client  drawer  recv  send  server  testing_0120.c
lvgl-fb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
lvgl-fb/build-pc/: CMakeCache.txt  Makefile  chess_app  cmake_install.cmake
lvgl-fb/build-pc/lv_drivers/: Makefile  cmake_install.cmake
lvgl-fb/build-pc/lvgl/: Makefile  cmake_install.cmake
lvgl-fb/build-pc/squi/: Makefile  cmake_install.cmake
lvgl-fb/build-pc/ui_src/4-login/: Makefile  cmake_install.cmake
lvgl-fb/firsttest/: firsttest.c
lvgl-fb/lv_drivers/: CMakeLists.txt  Makefile  cmake_install.cmake  lv_drv_conf.h  lv_drv_conf_template.h
lvgl-fb/lv_drivers/display/: drm.c  fbdev.c
lvgl-fb/lv_drivers/indev/: libinput.c
lvgl-fb/lv_drivers/sdl/: sdl.c
lvgl-fb/lv_drivers/wayland/: wayland.c
lvgl-fb/lvgl/: Makefile  cmake_install.cmake  lv_conf.h  lvgl.pc
lvgl-fb/lvgl/docs/porting/: display.md
lvgl-fb/lvgl/src/core/: lv_obj.h  lv_obj_style.c
lvgl-fb/lvgl/src/font/: lv_font_loader.c
lvgl-fb/squi/: CMakeCache.txt  CMakeLists.txt  Makefile  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
lvgl-fb/squi/components/: ui_comp.c  ui_comp.h  ui_comp_buttonlabel.c  ui_comp_buttonlabel.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_panelroomcomponent.c  ui_comp_panelroomcomponent.h
lvgl-fb/squi/fonts/: ui_font_Black.c  ui_font_Font1.c
lvgl-fb/squi/images/: ui_img_chess_cannons_black_png.c  ui_img_chess_cannons_red_png.c  ui_img_chess_elephants_black_png.c  ui_img_chess_elephants_red_png.c  ui_img_chess_general_red_png.c  ui_img_chess_king_black_png.c  ui_img_chess_knights_black_png.c  ui_img_chess_knights_red_png.c  ui_img_chess_mandarins_black_png.c  ui_img_chess_mandarins_red_png.c  ui_img_chess_pawns_black_png.c  ui_img_chess_pawns_red_png.c  ui_img_chess_rooks_black_png.c  ui_img_chess_rooks_red_png.c  ui_img_chessboard_png.c
lvgl-fb/squi/lv_drivers/: Makefile  cmake_install.cmake
lvgl-fb/squi/lvgl/: Makefile  cmake_install.cmake
lvgl-fb/squi/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen_login.c  ui_Screen_main_menu.c  ui_Screen_match.c  ui_Screen_register.c  ui_Screen_room.c
lvgl-fb/squi/squi/: Makefile
lvgl-fb/src/: client.c  client.h
lvgl-fb/ui_src/1-button/: 1-button.c
lvgl-fb/ui_src/2-switch/: 1-switch.c
lvgl-fb/ui_src/3-textarea/: 1-textarea.c
lvgl-fb/ui_src/4-login/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  login.c  login.h
lvgl-fb/ui_src/4-login/squi/: Makefile
src/: cJSON.c  client.c  client.h  server.c  server.h
src_server/: 1  server  server.c  server.h  user.txt  users.txt
(+10 files in other folders)
