cmake_minimum_required(VERSION 3.10)
project(lvgl_sdl)
include_directories(.)
include_directories(./lvgl)
include_directories(./lv_drivers)
include_directories(./squi)
link_directories(./lib)

add_subdirectory(./squi)

#add_subdirectory(lvgl)
#add_subdirectory(lv_drivers)
add_executable(${PROJECT_NAME} main.c)
#target_link_libraries(${PROJECT_NAME} PRIVATE lvgl lvgl::examples lvgl::demos lvgl::drivers SDL2)
target_link_libraries(${PROJECT_NAME} PRIVATE ui lvgl lvgl_examples lvgl_demos lv_drivers SDL2)
